sources/libLLVMSharp/LLVMSharp.h

/**
 * Represents an individual value in LLVM IR.
 *
 * This models llvm::Value.
 */
typedef struct LLVMOpaquePass* LLVMPassRef;
LLVMSHARP_LINKAGE LLVMMetadataRef llvmsharp_DITemplateValueParameter_getValue(LLVMMetadataRef parameter);
LLVMSHARP_LINKAGE const char* llvmsharp_DIVariable_getName(LLVMMetadataRef variable, size_t* out_size);
LLVMSHARP_LINKAGE LLVMMetadataRef llvmsharp_DIVariable_getType(LLVMMetadataRef variable);
LLVMSHARP_LINKAGE LLVMTypeRef llvmsharp_Function_getFunctionType(LLVMValueRef FnRef);
LLVMSHARP_LINKAGE LLVMTypeRef llvmsharp_Function_getReturnType(LLVMValueRef FnRef);
LLVMSHARP_LINKAGE LLVMMetadataRef llvmsharp_GlobalVariable_getGlobalVariableExpression(LLVMValueRef global_variable);
LLVMSHARP_LINKAGE LLVMMetadataRef llvmsharp_GlobalVariable_getMetadata(LLVMValueRef global_variable, uint32_t KindID);
LLVMSHARP_LINKAGE uint8_t llvmsharp_Instruction_hasNoSignedWrap(LLVMValueRef InstructionRef);
LLVMSHARP_LINKAGE uint8_t llvmsharp_Instruction_hasNoUnsignedWrap(LLVMValueRef InstructionRef);
LLVMSHARP_LINKAGE void llvmsharp_Module_GetIdentifiedStructTypes(LLVMModuleRef module, LLVMTypeRef** out_buffer, int32_t* out_size);
LLVMSHARP_LINKAGE void llvmsharp_PassManager_add(LLVMPassManagerRef pass_manager, LLVMPassRef pass);
LLVMSHARP_LINKAGE int32_t llvmsharp_Value_getDemangledName(LLVMValueRef ValueRef, char* buffer, int32_t buffer_size);
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createDeadCodeEliminationPass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createSROAPass(uint8_t PreserveCFG);
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createLICMPass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createLoopStrengthReducePass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createReassociatePass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createFlattenCFGPass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createCFGSimplificationPass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createTailCallEliminationPass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createConstantHoistingPass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createLowerInvokePass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createLowerSwitchPass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createBreakCriticalEdgesPass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createLCSSAPass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createPromoteMemoryToRegisterPass(uint8_t IsForced);
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createLoopSimplifyPass();
LLVMSHARP_LINKAGE LLVMPassRef llvmsharp_createUnifyLoopExitsPass();
LLVMSHARP_LINKAGE void llvmsharp_Free(void* obj);